# polite-shrink

./: CITATION.cff  CORE_IDEA.md  NAMING.md  PROVENANCE.md  README.md  REPORT.md  REPORT_rolling_upgrade.md  REPORT_stage1.md  REPORT_stage3.md  REPRODUCE.md  TEST_LEDGER.md  adversary.py  arc_sim.py  brake_sim.py  brake_storm_sweep.py  byzantine_sim.py  check_determinism.py  check_seeds.py  decoupled_sim.py  decoupled_sweep.py  defense_sim.py  diag_attribute_all_storm.py  diag_brake_reruns.py  diag_margin.py  diag_rolling_upgrade.py  diag_trace_post_death.py  ext_common.py  fairness_sim.py  kitsune2_port_design.md  message_loss_sim.py  message_loss_sweep.py  partial_liar_sim.py  partition_sim.py  plot_adversary.py  plot_rolling_upgrade.py  plot_sweep.py  polite_shrink.py  race_quantify.py  repair_sim.py  requirements.txt  (+12 more)
results/: adversary.json  byz_summary.md  byzantine.json  decoupled_cells.jsonl  decoupled_summary.md  defense.json  defense_summary.md  fairness.json  fairness_summary.md  message_loss_cells.jsonl  message_loss_summary.md  partial_liar.json  partial_summary.md  partition.json  partition_summary.md  race.json  race_summary.md  repair.json  repair_summary.md  rolling_upgrade_brake_storm_cells.jsonl  rolling_upgrade_brake_storm_summary.md  rolling_upgrade_cells.jsonl  rolling_upgrade_summary.md  scale.json  scale_summary.md  summary.md  sweep.json  sweep_cells.jsonl  sweep_summary.md  verified.json  verified_summary.md
spec/: .gitignore  NaiveShrink.cfg  NaiveShrink.tla  PoliteShrink.tla  README.md
wind_tunnel/: .gitignore  Cargo.toml  README.md  run_experiment.sh  run_summary.jsonl
wind_tunnel/analysis/: analyze_run.py  op_reachability.py
wind_tunnel/bindings/kitsune_client/: Cargo.toml
wind_tunnel/bindings/kitsune_client/src/: arc_metrics.rs  lib.rs  op_store.rs
wind_tunnel/bindings/kitsune_client/src/op_store/: test.rs
wind_tunnel/results/: REPORT.md  REPORT_stage2_wind_tunnel.md
wind_tunnel/results/settle-r5-a12-1/: analysis.txt  summary.json
wind_tunnel/results/storm-diag-1/: analysis.txt  op_summary.json  summary.json
wind_tunnel/results/storm-r5-a12-c6-1/: analysis.txt  summary.json
wind_tunnel/results/storm-timed-fixed-1/: analysis.txt  op_summary.json  summary.json
wind_tunnel/results/storm-timed-r5-a12-c6-1/: analysis.txt  op_summary.json  summary.json
wind_tunnel/scenarios/kitsune_arc_sharding/: Cargo.toml
wind_tunnel/scenarios/kitsune_arc_sharding/src/: main.rs
wind_tunnel/tools/bootstrap_relay/: Cargo.toml
wind_tunnel/tools/bootstrap_relay/src/: main.rs
